--- a/reg_page.html
+++ b/reg_page.html
@@ -3,14 +3,49 @@
     <head>
         <title>Registration</title>
     </head>
+    <style>
+        body{
+            background-color: powderblue;
+            font-size: larger;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        .container{
+            padding: 15px;
+            /* background-color: azure; */
+        }
+        input[type = text],
+        input[type=password] {
+            width:auto;
+            height: 10%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            background: #f1f1f1;
+        }
+        .registerbtn {
+            background-color: green;
+            color: white;
+            padding: 16px 20px;
+            margin: 8px 0;
+            cursor:pointer;
+            width: auto;
+            opacity: 0.9;
+        }
+
+    </style>
     <body>
+        <div class = "container">
         <h1>Register</h1>
         <p>Please, fill the form for registration</p>
-        <label for ="username"> UserName</label>
+        <label for ="username"><b>UserName</b></label>
+        <p>  </p>
         <input type = "text" placeholder="Enter user name" name = "username" required>
-        <label for ="pswd">Password</label>
+        <p>    </p>
+        <label for ="pswd"><b>Password</b></label>
+        <p>  </p>
         <input type = "password" placeholder="Enter Password" name="pswd" required>
+        <p>     </p>
         <button type = "submit" class = "registerbtn">Register</button>
-
+        </div>
     </body>
 </html>
